# Geant4_Comp_Pol

./: README.md
Compton_Polarimeter/: CMakeLists.txt  Compton.cc  plotHisto.C  random.mac  run1.mac  vis.mac
Compton_Polarimeter/buildn/: CMakeCache.txt  Compton  Makefile  cmake_install.cmake  run1.mac
Compton_Polarimeter/include/: ActionInitialization.hh  ComptonTabulatedField3D.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
Compton_Polarimeter/src/: ActionInitialization.cc  ComptonTabulatedField3D.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
